--- a/rythms/package.json
+++ b/rythms/package.json
@@ -21,6 +21,9 @@
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "npm": ">=10.5.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
