--- a/rythms/package.json
+++ b/rythms/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@indistinguishable-from-magic/magic-js": "^1.0.1",
     "@indistinguishable-from-magic/nexus-js": "^1.0.0",
     "@p5-wrapper/react": "^4.3.2",
+    "@rollup/plugin-babel": "^6.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
