--- a/rythms/package.json
+++ b/rythms/package.json
@@ -9,7 +9,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/kv": "^1.0.1",
     "express": "^4.18.2",
+    "firebase": "^10.9.0",
     "needle": "^3.3.1",
     "node-fetch": "^3.3.2",
     "p5": "^1.9.0",
